<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
		>
	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/scan_code"
	        android:onClick="onClick"
			android:id="@+id/scan_code"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_by_barcode"
            android:visibility="gone"
            android:onClick="onClick"
            android:id="@+id/get_by_barcode"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_barcode"
            android:visibility="gone"
            android:onClick="onClick"
            android:id="@+id/add_barcode"/>
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/status"/>
	<EditText
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/edit_name"
			android:visibility="gone"
			android:hint="@string/edit_name_hint"/>
	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/error"
			android:id="@+id/check_button"
			android:layout_gravity="center_horizontal"
			android:onClick="onClick"
			android:visibility="gone"/>
	<Button
			android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:text="@string/web_link"
			android:onClick="onClick"
			android:id="@+id/web_button"
			android:visibility="gone"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/log_label"
			android:id="@+id/log_label"
			android:layout_gravity="center_horizontal"
			android:visibility="gone"/>
	<ListView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/logList"
			android:layout_gravity="center_horizontal"
			android:visibility="gone"/>
</LinearLayout>

